--- a/windowManager/Makefile
+++ b/windowManager/Makefile
@@ -25,6 +25,8 @@ slstatus:
 	$(MAKE) -C ./slstatus MAKEFLAGS=
 st:
 	$(MAKE) -C ./st MAKEFLAGS=
+dmenu:
+	$(MAKE) -C ./dmenu MAKEFLAGS=
 swim: ${OBJ}
 	${CC} -o $@ ${OBJ} ${LDFLAGS}
 
@@ -32,6 +34,7 @@ clean:
 	rm -f swim ${OBJ} swim-${VERSION}.tar.gz
 	$(MAKE) -C ./slstatus clean MAKEFLAGS=
 	$(MAKE) -C ./st clean MAKEFLAGS=
+	$(MAKE) -C ./dmenu clean MAKEFLAGS=
 
 install: all
 	mkdir -p ${DESTDIR}${PREFIX}/bin
@@ -39,6 +42,7 @@ install: all
 	chmod 755 ${DESTDIR}${PREFIX}/bin/swim
 	$(MAKE) -C ./slstatus install MAKEFLAGS=
 	$(MAKE) -C ./st install MAKEFLAGS=
+	$(MAKE) -C ./dmenu install MAKEFLAGS=
 
 #	mkdir -p ${DESTDIR}${MANPREFIX}/man1
 #	sed "s/VERSION/${VERSION}/g" < dwm.1 > ${DESTDIR}${MANPREFIX}/man1/dwm.1
@@ -48,4 +52,4 @@ uninstall:
 	rm -f ${DESTDIR}${PREFIX}/bin/swim
 #		${DESTDIR}${MANPREFIX}/man1/dwm.1
 
-.PHONY: all options clean install uninstall slstatus
+.PHONY: all options clean install uninstall slstatus st dmenu
