modified makefile to suid binary

--- a/windowManager/slock/Makefile
+++ b/windowManager/slock/Makefile
@@ -45,8 +45,10 @@ install: all
 	@echo installing executable file to ${DESTDIR}${PREFIX}/bin
 	@mkdir -p ${DESTDIR}${PREFIX}/bin
 	@cp -f slock ${DESTDIR}${PREFIX}/bin
-	@chmod 755 ${DESTDIR}${PREFIX}/bin/slock
-	@chmod u+s ${DESTDIR}${PREFIX}/bin/slock
+	@echo "Note: root is required to chmod/chown suid binary!"
+	sudo chown root ${DESTDIR}${PREFIX}/bin/slock
+	sudo chmod 755 ${DESTDIR}${PREFIX}/bin/slock
+	sudo chmod u+s ${DESTDIR}${PREFIX}/bin/slock
 	@echo installing manual page to ${DESTDIR}${MANPREFIX}/man1
 	@mkdir -p ${DESTDIR}${MANPREFIX}/man1
 	@sed "s/VERSION/${VERSION}/g" <slock.1 >${DESTDIR}${MANPREFIX}/man1/slock.1
