--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "surf"]
-	path = surf
-	url = https://git.suckless.org/surf
+#[submodule "surf"]
+#	path = surf
+#	url = https://git.suckless.org/surf
